--- a/1-guia/ejercicios-1/ej-25-1.tex
+++ b/1-guia/ejercicios-1/ej-25-1.tex
@@ -1,65 +1,67 @@
-\usetikzlibrary{bending}
 \begin{enunciado}{\ejercicio}
   Sea $A = \set{1,2,3,4,5,6,7,8,9,10}$.
   Hallar y graficar la relación de equivalencia en $A$ asociada a la partición
   $\set{ \set{1,3}, \set{2,6,7}, \set{4,8,9,10}, \set{5} }$.
   ¿Cuántas clases de equivalencia distintas tiene? Hallar un representante para cada clase.
 \end{enunciado}
+$$
+  \begin{tikzpicture}[
+    node distance=1.4cm,
+    nodo/.style={circle, draw, color={#1}, minimum size=4pt, inner sep=2pt, outer sep=3pt},
+    arista/.style={-{Latex[length=3pt]}, thin, bend left=10, color={#1}},
+    rulo/.style 2 args = {-{Latex[length=3pt]}, out=#1, in=#1+45, looseness=4, color={#2}}
+    ]
+    \node[nodo=Cerulean] (1) {$1$};
+    \node[nodo=Cerulean, above right of=1] (3) {$3$};
+    \node[nodo=OliveGreen, below right of=3] (2) {$2$};
+    \node[nodo=OliveGreen, above right of=2] (6) {$6$};
+    \node[nodo=OliveGreen, below right of=6] (7) {$7$};
+    \node[nodo=Orange, below of=7] (5) {$5$};
+    \node[nodo=Purple, below right of=1] (4) {$4$};
+    \node[nodo=Purple, right of=4] (8) {$8$};
+    \node[nodo=Purple, below of=4] (9) {$9$};
+    \node[nodo=Purple, right of=9] (10) {$10$};
 
-\begin{center}
-\begin{tikzpicture}[carrow/.style={to path={%
-    ($(\tikztotarget)+(#1:\pgfkeysvalueof{/tikz/cradius})+(#1+170:\pgfkeysvalueof{/tikz/cradius})$)
-    arc[start angle=#1+170,end angle=#1-170,radius=\pgfkeysvalueof{/tikz/cradius}]},
-    ->},dot/.style={circle,inner sep=1.2pt,fill,outer sep=0.5ex},
-    cradius/.initial=0.4,
-    >={Latex[bend]},bend angle=12]
- \path node[dot,label=225:{$1$}](a){}
-  ++ (45:1.5) node[dot,label=45:{$3$}](b){}
-  ++ (-30:1.5) node[dot,label=90:{$5$}](c){}
-  ($(a)+(0,-1.8)$) node[dot,label=135:{$d$}](d){}
-  ($(d)+(1.25,0)$) node[dot,label=45:{$f$}](f){}
-  ++ (1.5,-0.3) node[dot,label=-120:{$2$}](e){}
-  ++ (0:1.8) node[dot,label=-60:{$6$}](h){}
-  ++ (120:1.8) node[dot,label=90:{$7$}](g){}
-  ($(d)+(0,-1.5)$) node[dot,label=225:{$8$}](i){}
-  ($(f)+(0,-1.5)$) node[dot,label=315:{$9$}](j){};
- \path[shorten >=1ex, shorten <=0.5ex,semithick] 
- (a) edge[->,bend left] (b) edge[carrow=45] (b)
- (b) edge[->,bend left] (a) edge[carrow=-135,<-] (a)
- edge[carrow=135,<-] (d)
- edge[carrow=45,<-] (f)
- edge[carrow=-120] (e)
- edge[carrow=-60,<-] (h)
- edge[carrow=90,<-] (g)
- edge[carrow=90,<-] (c)
- edge[carrow=-135,<-] (i)
- edge[carrow=315,<-] (j)
- (e) edge[->,bend left] (g)
- (g) edge[->,bend left] (e)
- (h) edge[->,bend left] (g)
- (g) edge[->,bend left] (h)
- (e) edge[->,bend left] (h)
- (h) edge[->,bend left] (e)
- (i) edge[->,bend left] (j)
- (j) edge[->,bend left] (i)
- (d) edge[->,bend left] (f)
- (f) edge[->,bend left] (d)
- (i) edge[->,bend left] (d)
- (d) edge[->,bend left] (i)
- (j) edge[->,bend left] (d)
- (d) edge[->,bend left] (j)
- (i) edge[->,bend left] (f)
- (f) edge[->,bend left] (i)
- (j) edge[->,bend left] (f)
- (f) edge[->,bend left] (j);    
-\end{tikzpicture}
-\end{center}
+    \foreach \c/\nodes in {Cerulean/{1,3}, OliveGreen/{2,6,7}, Purple/{4,8,9,10}} {
+    \foreach \i in \nodes {
+      \foreach \j in \nodes {
+        \ifnum\i<\j
+          \draw[arista=\c] (\i) to (\j);
+          \draw[arista=\c] (\j) to (\i);
+        \fi
+      }
+    }
+    }
 
-Ese seria el grafo de la relacion, es de equivalencia pues cumple que es reflexiva, simetrica y transitiva. 
+    \draw[rulo={200}{Cerulean}] (1) to (1);
+    \draw[rulo={20}{Cerulean}] (3) to (3);
+
+    \draw[rulo={200}{OliveGreen}] (2) to (2);
+    \draw[rulo={65}{OliveGreen}] (6) to (6);
+    \draw[rulo={290}{OliveGreen}] (7) to (7);
+
+    \draw[rulo={20}{Orange}] (5) to (5);
+
+    \draw[rulo={110}{Purple}] (4) to (4);
+    \draw[rulo={20}{Purple}] (8) to (8);
+    \draw[rulo={200}{Purple}] (9) to (9);
+    \draw[rulo={290}{Purple}] (10) to (10);
+
+    %Universo
+    \draw[thick, rounded corners=5pt]
+    ([xshift=-5pt,yshift=-5pt]current bounding box.south west)
+    rectangle
+    ([xshift=5pt,yshift=5pt]current bounding box.north east) node [above right] {$a$};
+  \end{tikzpicture}
+$$
+Ese sería el grafo de la relación, es de equivalencia pues cumple que es reflexiva, simétrica y transitiva.
 
 Hay $4$ clases de equivalencia ya que son $4$ las particiones disjuntas del conjunto, y como representante podemos elegir cualquiera de cada clase,
-como convencion digamos que elegimos el primero que aparece, luego los representantes son : $\cajaResultado{1, 2, 4, 5.}$
+como convención digamos que elegimos el primero que aparece, luego los representantes son :
+$$
+  \cajaResultado{1, 2, 4, 5}.
+$$
 
 \begin{aportes}
- \item \aporte{https://github.com/sigfripro}{sigfripro \github}
+  \item \aporte{https://github.com/sigfripro}{sigfripro \github}
 \end{aportes}
