--- a/7-guia/ejercicios-7/ej-8-7.tex
+++ b/7-guia/ejercicios-7/ej-8-7.tex
@@ -53,68 +53,75 @@
         Dado que $p(1), p(k) \ytext p(k+1)$ resultaron verdaderas por criterio de inducción $p(n)$ también lo es $\paratodo n \en \naturales$.
 
   \item Por induccion nuevamente:
-  
-          $$
-           p(n): X + a \divideA X^{2k + 1} + a^{2k + 1} \quad \text{en} \K[X] \paratodo k \in \naturales_0
-          $$
-          \textit{Caso base:}
-          $$
-           p(0) : X + a \divideA X^1 + a^1
-          $$
-          El caso $p(0)$ es verdadero. 
 
-          \textit{Paso inductivo: } 
-          Asumo que
-          $$
-           p(k) : \underbrace{X + a \divideA X^{2k + 1} + a^{2k + 1}}_{\text{hipotesis inductiva}}
-          $$
-          es verdadero. Luego quiero probar que 
-          $$
-           p(k + 1) : X + a \divideA X^{2(k+1) + 1} + a^{2(k+1) + 1} = X^{2k + 3} + a^{2k + 3}
-          $$
-          sea verdadero tambien.
-          Acá la idea es similar al item anterior, hacemos una division a mano y luego agrupamos y aplicamos la 
-          hipotesis inductiva. Vemos que para la hipotesis inductiva necesitamos de exponente $2k + 1$ pero tenemos
-          $2k + 3$, entonces en vez de dividir por $X + a$, dividimos por $X^2 - a^2$. 
-          
-          $$
+        $$
+          p(n): X + a \divideA X^{2k + 1} + a^{2k + 1} \quad \text{en} \K[X] \paratodo k \in \naturales_0
+        $$
+        \textit{Caso base:}
+        $$
+          p(0) : X + a \divideA X^1 + a^1
+        $$
+        El caso $p(0)$ es verdadero.
+
+        \textit{Paso inductivo: }
+        Asumo que
+        $$
+          p(k) : \ub{
+            X + a \divideA X^{2k + 1} + a^{2k + 1}
+          }{
+            \text{\purple{hipótesis inductiva}}
+          }
+        $$
+        es verdadero. Luego quiero probar que
+        $$
+          p(k + 1) : X + a \divideA X^{2(k+1) + 1} + a^{2(k+1) + 1} = X^{2k + 3} + a^{2k + 3}
+        $$
+        sea verdadero tambien.
+
+        Acá la idea es similar al ítem anterior, hacemos una división a mano y luego agrupamos y aplicamos la
+        \purple{hipótesis inductiva}, para la cual necesitamos de exponente $2k + 1$ pero tenemos
+        $2k + 3$, entonces en vez de dividir por $X + a$, dividimos por $X^2 - a^2$.
+
+        $$
           \begin{array}{rcl}
-            X^{2k + 3} + a^{2k + 3} & = & X^{2k + 1}\cdot(X^2 - a^2) + a^{2k+3} + X^{2k + 1}\cdot a^2 \\
+            X^{2k + 3} + a^{2k + 3} & = & X^{2k + 1}\cdot(X^2 - a^2) + a^{2k+3} + X^{2k + 1}\cdot a^2                       \\
                                     & = & X^{2k + 1}\cdot\blue{(X + a)}(X - a) + a^2 \cdot \blue{(X^{2k + 1} + a^{2k + 1})}
           \end{array}
-          $$
-          Aplicando la hipotesis inductiva se ve que el caso $p(k+1)$ es verdadero. Luego 
-          $p(k)$ es verdadera $\forall k \in \naturales_0$, como se queria probar.
-           
-      
-          
+        $$
+        Aplicando la hipótesis inductiva se ve que el caso $p(k+1)$ es verdadero. Luego
+        $p(k)$ es verdadera $\paratodo k \en \naturales_0$, como se quería probar.
 
   \item Procedimiento igual a los anteriores:
-          $$
-           p(n) : X + a \divideA X^{2k} - a^{2k} \quad \text{en} \K[X] \paratodo k \in \naturales
-          $$
-          \textit{Caso base:}
-          $$
-           p(1) : X + a \divideA X^2 - a^2 = (X - a)(X + a)
-          $$
-          El caso $p(1)$ es verdadero.
-          Asumo que
-          $$
-           p(k) : \underbrace{X + a \divideA X^{2k} - a^{2k}}_{\text{hipotesis inductiva}}
-          $$
-          es verdadero. Luego quiero probar que 
-          $$
-           p(k + 1) : X + a \divideA X^{2k + 2} - a^{2k + 2}
-          $$
-          
-          $$
+        $$
+          p(n) : X + a \divideA X^{2k} - a^{2k} \quad \text{en } \K[X] \paratodo k \en \naturales
+        $$
+        \textit{Caso base:}
+        $$
+          p(1) : X + a \divideA X^2 - a^2 = (X - a)(X + a)
+        $$
+        El caso $p(1)$ es verdadero.
+        Asumo que
+        $$
+          p(k) :
+          \ub{
+            X + a \divideA X^{2k} - a^{2k}
+          }{
+            \text{\purple{hipótesis inductiva}}
+          }
+        $$
+        es verdadero. Luego quiero probar que
+        $$
+          p(k + 1) : X + a \divideA X^{2k + 2} - a^{2k + 2}
+        $$
+
+        $$
           \begin{array}{rcl}
-            X^{2k} - a^{2k} &=& X^{2k}\cdot(X^2 - a^2) - a^{2k + 2} + a^2 \cdot X^{2k} \\
-                            &=& X^{2k}\cdot(X - a)\blue{(X + a)} + a^2 \cdot \blue{(X^{2k} - a^{2k})}
+            X^{2k} - a^{2k} & = & X^{2k}\cdot(X^2 - a^2) - a^{2k + 2} + a^2 \cdot X^{2k}                \\
+                            & = & X^{2k}\cdot(X - a)\blue{(X + a)} + a^2 \cdot \blue{(X^{2k} - a^{2k})}
           \end{array}
-          $$
-          Aplicando la hipotesis inductiva se ve que el caso $p(k+1)$ es verdadero. Luego 
-          $p(k)$ es verdadera $\forall k \in \naturales$, como se queria probar.
+        $$
+        Aplicando la hipótesis inductiva se ve que el caso $p(k+1)$ es verdadero. Luego
+        $p(k)$ es verdadera $\paratodo k \en \naturales$, como se quería probar.
 \end{enumerate}
 
 \begin{aportes}
