remasterizando gráficos de relaciones

--- a/1-guia/ejercicios-1/ej-16-1.tex
+++ b/1-guia/ejercicios-1/ej-16-1.tex
@@ -19,7 +19,8 @@
           \end{array}
         $$
         O bien si podemos conectar los pasos con "$\sisolosi$". En este caso se usa el de los "$\sisolosi$" y mucho
-        de las \hyperlink{teoria-1:conjuntos-basicos}{definiciones que podés ver acá en las notas teóricas}:\par
+        de las \hyperlink{teoria-1:basicos-conjuntos}{definiciones que podés ver acá en las notas teóricas}:
+
         Sea el par $(x,y)$
         $$
           \begin{array}{c}
