--- a/1-guia/ejercicios-1/ej-25-1.tex
+++ b/1-guia/ejercicios-1/ej-25-1.tex
@@ -51,7 +51,7 @@ $$
     \draw[thick, rounded corners=5pt]
     ([xshift=-5pt,yshift=-5pt]current bounding box.south west)
     rectangle
-    ([xshift=5pt,yshift=5pt]current bounding box.north east) node [above right] {$a$};
+    ([xshift=5pt,yshift=5pt]current bounding box.north east) node [right] {$A$};
   \end{tikzpicture}
 $$
 Ese sería el grafo de la relación, es de equivalencia pues cumple que es reflexiva, simétrica y transitiva.
