--- a/1-guia/ejercicios-1/ej-17-1.tex
+++ b/1-guia/ejercicios-1/ej-17-1.tex
@@ -1,75 +1,98 @@
-\def\diecisietei{
-  \begin{tikzpicture}[scale=0.7, >=Latex, draw=Aquamarine, transform shape]
-    %A vértices
-    \node (1a) {$\bullet$};
-    \node[] at (1a.west) {1};
-    \node[below=of 1a] (2a) {$\bullet$};
-    \node[] at (2a.west) {2};
-    \node[below=of 2a] (3a) {$\bullet$};
-    \node[] at (3a.west) {3};
+\def\nodosDiecisiete{
+  \node[nodo=black, label=left:$1$] (1) {};
+  \node[nodo=black, label=left:$2$, below of=1] (2) {};
+  \node[nodo=black, label=left:$3$, below of=2] (3) {};
 
-    %B vértices
-    \node[right=2cm of 1a] (1b) {$\bullet$};
-    \node[] at (1b.east) {1};
-    \node[below right=of 1b] (3b) {$\bullet$};
-    \node[] at (3b.east) {3};
-    \node[below left=of 3b] (5b) {$\bullet$};
-    \node[] at (5b.east) {5};
-    \node[below right=of 5b] (7b) {$\bullet$};
-    \node[] at (7b.east) {7};
+  \draw[thick, rounded corners = 10pt]
+  ([xshift=5pt,yshift=-5pt]current bounding box.south east)
+  rectangle
+  ([xshift=-5pt,yshift=5pt]current bounding box.north west) node [left] {$A$};
 
-    % Elipses
-    \node[shape=ellipse, draw, black, minimum size=2cm,fit={(1a) (3a)}] {};
-    \node[shape=ellipse, draw, black, minimum size=2cm,fit={(1b) (3b) (7b)}] {};
-    \node[below=1cm of 3a] {$A$};
-    \node[below=1.2cm of 7b] {$B$};
+  \node[nodo=black, label=right:$1$, right of=1] (1b) {};
+  \node[nodo=black, label=right:$3$, below of=1b] (3b) {};
+  \node[nodo=black, label=right:$5$, below of=3b] (5) {};
+  \node[nodo=black, label=right:$7$, below of=5] (7) {};
 
-    % Aristas
-    \draw[->, bend left] (1a) to (1b);
-    \draw[->, bend right] (1a) to (3b);
-    \draw[->, bend right] (1a) to (7b);
-    \draw[->, bend right] (3a) to (1b);
-    \draw[->, bend right] (3a) to (5b);
-  \end{tikzpicture}
+  \draw[rectangle, draw, fit={(1b) (3b) (5) (7)}, thick, rounded corners = 10pt]
+  ([xshift=-5pt, yshift=-5pt]7.south west)
+  rectangle
+  ([xshift=20pt, yshift=5pt]1b.north east) node [left] {$B$};
 }
 
 \separador
+
 \underline{\textit{Relaciones}}
-Definición de Relación, $\relacion$:
-\begin{center}
-  \fbox{
-    \parbox{.9\textwidth}{
-      Sean $A$ y $B$ conjuntos. Una \textit{relación $\relacion$ de $A$ en $B$}
-      es un subconjunto cualquiera $\relacion$ del producto cartesiano $A \times B$. Es decir $\relacion$
-      de $A$ en $B$ si $\relacion \en \partes(A \times B)$.
-    }
-  }
-\end{center}
 
 \begin{enunciado}{\ejercicio}
   Sean $A = \set{1, 2, 3}$ y $B = \set{1, 3, 5, 7}$. Verificar las siguientes
   relaciones de $A$ y $B$ y en caso afirmativo graficarlas por medio de un diagrama
   con flechas de $A$ en $B$ y por medio de puntos en el producto cartesiano $A \times B$.
+  \begin{enumerate}[label=\roman*)]
+    \begin{multicols}{2}
+      \item  $\relacion = \set{(1,1), (1,3), (1,7), (3,1), (3,5)}$
+      \item $\relacion = \set{(1,1), (1,3), (2,7), (3,2), (3,5)}$
+      \item $\relacion = \set{(1,1), (2,7), (3,7)}$
+      \item  $\relacion = \set{(1,3), (2,1), (3,7)}$
+    \end{multicols}
+  \end{enumerate}
 \end{enunciado}
+
+Es útil traer la \textit{definición de Relación, $\relacion$:}
+\parrafoDestacado{
+  Sean $A$ y $B$ conjuntos. Una \textit{relación $\relacion$ de $A$ en $B$}
+  es un subconjunto cualquiera $\relacion$ del producto cartesiano $A \times B$. Es decir $\relacion$
+  de $A$ en $B$ si $\relacion \en \partes(A \times B)$.
+}
 \begin{enumerate}[label=\roman*)]
-  \item
-        \begin{minipage}{1\textwidth}
-          \begin{minipage}{0.5\textwidth}
-            $\relacion = \set{(1,1), (1,3), (1,7), (3,1), (3,5)}$
-          \end{minipage}
-          \begin{minipage}{0.25\textwidth}
-            \diecisietei
-          \end{minipage}
-        \end{minipage}
+  \item Esta es una $\relacion$:
+        $$
+          \begin{tikzpicture}
+            [
+            scale = 0.7,
+            node distance=1.2cm,
+            nodo/.style={circle, fill=black, color={#1}, minimum size = 5pt, inner sep = 2pt},
+            arista/.style={-{Latex[length=3pt]}, ultra thin, bend left=25, color={#1}},
+            ]
+            \nodosDiecisiete
+            \draw[arista=Cerulean] (1) to (1b);
+            \draw[arista=Cerulean] (1) to (3b);
+            \draw[arista=Cerulean, bend right=10] (1) to (7);
+            \draw[arista=Cerulean] (3) to (3b);
+            \draw[arista=Cerulean, bend right] (3) to (5);
+          \end{tikzpicture}
+        $$
 
-  \item $\relacion =
-          \set{(1,1), (1,3), (2,7), (3,2), (3,5)}
-          \to
-          3 \relacion 2 \notin \partes(A \times B) $
+  \item No es una relación dado que $3 \relacion 2 \notin \partes(A \times B) $
 
-  \item $\relacion = \set{(1,1), (2,7), (3,7)}$
-        \Hacer
+  \item Es una relación:
+        $$
+          \begin{tikzpicture}
+            [
+            scale = 0.7,
+            node distance=1.2cm,
+            nodo/.style={circle, fill=black, color={#1}, minimum size = 5pt, inner sep = 2pt},
+            arista/.style={-{Latex[length=3pt]}, ultra thin, bend left=25, color={#1}},
+            ]
+            \nodosDiecisiete
+            \draw[arista=violet] (1) to (1b);
+            \draw[arista=violet, bend left=10] (2) to (7);
+            \draw[arista=violet, bend right] (3) to (7);
+          \end{tikzpicture}
+        $$
 
-  \item $\relacion = \set{(1,3), (2,1), (3,7)}$
-        \Hacer
+  \item Es una relación:
+        $$
+          \begin{tikzpicture}
+            [
+            scale = 0.7,
+            node distance=1.2cm,
+            nodo/.style={circle, fill=black, color={#1}, minimum size = 5pt, inner sep = 2pt},
+            arista/.style={-{Latex[length=3pt]}, ultra thin, bend left=25, color={#1}},
+            ]
+            \nodosDiecisiete
+            \draw[arista=orange] (1) to (3b);
+            \draw[arista=orange, bend left=10] (2) to (1b);
+            \draw[arista=orange, bend right] (3) to (7);
+          \end{tikzpicture}
+        $$
 \end{enumerate}
