--- a/1-guia/ejercicios-1/ej-27-1.tex
+++ b/1-guia/ejercicios-1/ej-27-1.tex
@@ -41,7 +41,7 @@
     \draw[thick, rounded corners=5pt]
     ([xshift=-5pt,yshift=-5pt]current bounding box.south west)
     rectangle
-    ([xshift=5pt,yshift=5pt]current bounding box.north east) node [above right] {$a$};
+    ([xshift=5pt,yshift=5pt]current bounding box.north east) node [above right] {$A$};
 
   \end{tikzpicture}
 }
